2025-10-14T01:56:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18483091435 # 1281
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-14
* notice: last 14d: unq all: 24 71
* notice: prev accum: outdated-unq outdated-all / unq all: 1224 5942 / 1253 6015
* notice: next accum: outdated-unq outdated-all / unq all: 1226 5944 / 1253 6015
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-09-29] / []

2025-10-12T02:00:05Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18437629904 # 1277
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-12
* notice: last 14d: unq all: 26 73
* notice: prev accum: outdated-unq outdated-all / unq all: 1222 5936 / 1253 6015
* notice: next accum: outdated-unq outdated-all / unq all: 1224 5942 / 1253 6015
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-09-27] / []

2025-10-10T01:56:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18394145757 # 1273
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-10
* notice: last 14d: unq all: 28 79
* notice: prev accum: outdated-unq outdated-all / unq all: 1222 5936 / 1251 6013
* notice: next accum: outdated-unq outdated-all / unq all: 1222 5936 / 1253 6015
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +3 +6 -0 -0 / 3 6
* notice: removed / changed dates: [] / [2025-10-09]

2025-10-09T12:54:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18376987387 # 1272