@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-10-14T01:56:21Z",
+  "timestamp" : "2025-10-14T12:55:51Z",
   "count_outdated" : 5944,
   "uniques_outdated" : 1226,
-  "count" : 6015,
-  "uniques" : 1253,
+  "count" : 6016,
+  "uniques" : 1254,
   "views" : [
     {
       "timestamp": "2025-09-30T00:00:00Z",
@@ -76,6 +76,15 @@
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2025-10-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
