@@ -1,6 +1,6 @@
 {
-  "count": 71,
-  "uniques": 24,
+  "count": 72,
+  "uniques": 25,
   "views": [
     {
       "timestamp": "2025-09-30T00:00:00Z",
@@ -41,6 +41,11 @@
       "timestamp": "2025-10-09T00:00:00Z",
       "count": 6,
       "uniques": 3
+    },
+    {
+      "timestamp": "2025-10-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
